--- a/dist.ini
+++ b/dist.ini
@@ -6,9 +6,13 @@ name=Config-Tree
 :version=0.23
 
 [Prereqs / TestRequires]
-Test::More=0.98
+;Test::More=0.98
 
 [Prereqs]
 perl=5.010001
+
 experimental=0
+strict=0
+warnings=0
+
 Path::Naive=0.03
